[gd_scene load_steps=11 format=2]

[ext_resource path="res://PixelArt/Enemies/StingFly Idle.png" type="Texture" id=1]
[ext_resource path="res://PixelArt/OldShadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/StingFly.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 7.40355

[sub_resource type="Animation" id=2]
resource_name = "Fly"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 128.25

[node name="StingFly" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
hframes = 3

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.75, -14.5 )
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
